<resources>
    <string name="app_name">Bangumi</string>
    <string name="menu_title_home">主页</string>
    <string name="menu_title_my_follow">我的追番</string>
    <string name="menu_title_my_download">我的下载</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="title_menu_bangumi">番剧</string>
    <string name="title_menu_category">分类</string>
    <string name="title_menu_timetable">时间表</string>
    <string name="text_search">搜索你想看的吧~</string>
    <string name="key_home_page">key_home_page</string>
    <string name="favorite_bangumi">我的追番</string>
    <string name="text_error_retry">出错了>_&lt; \n点击图片重试</string>
    <string name="text_noting">什么都没有哦</string>
    <string name="text_timetable_error">发生错误</string>
    <string name="meun_search">搜索</string>
    <string name="menu_title_history">历史记录</string>
    <string name="button_text_retry">重试</string>
    <string name="text_refresh_error">刷新出错</string>
    <string name="followButtonSelectText">已追番</string>
    <string name="followButtonUnSelectText">追番</string>
    <string name="text_detail">详情</string>
    <string name="text_style">风格</string>
    <string name="text_cast">角色声优</string>
    <string name="text_staff">制作</string>
    <string name="text_intro">简介</string>
    <string name="video_record_text">你上次观看到%s</string>
    <string name="skipToPlayer">跳转播放</string>
    <string name="key_danmaku_maxRaw">max_line</string>
    <string name="key_danmaku_textsize">danmaku_textsize</string>
    <string name="key_danmaku_auto_show">danmaku_auto_show</string>
    <string name="text_danm_switch">弹幕开关</string>
    <string name="text_danmu_textsize">弹幕字号</string>
    <string name="text_danmu_maxraw">最大行数</string>
    <string name="text_use_mobile">您正在使用移动网络!</string>
    <string name="text_continue">继续</string>
    <string name="text_video_loading_error">视频加载出错!</string>
    <string name="key_play_moibleState">key_play_moibleState</string>
    <string name="text_no_danmu">该视频没有弹幕哦~</string>
    <string name="text_video_parser_error">视频解析错误, 是否跳转至浏览器观看</string>
    <string name="text_tips">提示</string>
    <string name="key_max_download">key_max_download</string>
    <string name="key_auto_resume_download">key_auto_resume_download</string>
    <string name="text_permission">如果不授权储存权限, 将无法下载视频喔</string>
    <string name="text_get_permission">去授权</string>
    <string name="text_app_update_title">更新提示</string>
    <string name="text_app_update_message">发现了新版本, 喜欢的朋友可以更新一波哦~</string>
    <string name="text_setting_header_image">设置图片</string>
    <string name="text_setting_header_image_msg">尽量选择不要太大的图片哦~</string>
    <string name="text_setting_header_image_coustom">去选图</string>
    <string name="text_setting_header_image_local">恢复原图</string>
    <string name="text_app_update_now">去下载</string>


    <string name="title_about">关于</string>
    <string name="title_versions">版本</string>
    <string name="title_project_url">源码地址</string>
    <string name="title_home_sourch">主页</string>
    <string name="title_clear_cache">清除缓存</string>
    <string name="summary_clear_cache">清除图片缓存</string>
    <string name="key_clear_cache">clear_cache</string>
    <string name="title_other_settings">其他</string>
    <string name="title_danmaku_switch">自动打开弹幕</string>
    <string name="summary_danmaku_switch">有弹幕的视频源自动打开弹幕</string>
    <string name="title_play_settings">播放</string>
    <string name="summary_auto_play_next">视频结束后自动播放下一集</string>
    <string name="title_auto_play_next">自动播放下一集</string>
    <string name="summary_play_no_wifi">非wifi环境下不再提醒直接播放视频</string>
    <string name="title_play_no_wifi">非wifi下自动播放</string>
    <string name="title_download_settings">下载</string>
    <string name="titel_auto_recover_download">自动恢复下载</string>
    <string name="summary_auto_recover_download">wifi环境下软件开启后自动恢复未完成下载</string>
    <string name="key_decoder_plan">decoder_plan</string>
    <string name="title_decoder_plan">解码方式</string>
    <string name="key_auto_play_next">key_auto_play_next</string>
    <string name="title_max_download">同时最大下载数量</string>
    <string name="title_setting">设置</string>
    <string name="key_dl_unlock">key_dl_lock</string>
    <string name="title_skid_dl">滑动打开侧栏</string>
    <string name="summary_skid_dl">通过手势滑动打开侧栏面板</string>
    <string name="summary_app_check_update">软件开启后检查应用是否有更新</string>
    <string name="title_app_check_update">自动检查更新</string>
    <string name="key_auto_check_updata">key_auto_check_updata</string>
    <string name="title_prioritized_sourch">优先显示的搜索结果</string>
    <string name="key_prioritized_search_sourch">key_prioritized_search_sourch</string>
    <string name="title_day_light">日间模式</string>
    <string name="key_isDayNight">key_isDayNight</string>
    <string name="text_day_night">夜间模式</string>
    <string name="title_theme">界面</string>
    <string name="key_theme">key_theme</string>
    <string name="key_CustomHeaderImagePath">key_CustomHeaderImagePath</string>
</resources>
