<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:checkable="true"
            android:checked="true"
            android:title="@string/menu_title_home"/>

        <item android:id="@+id/history"
            android:icon="@drawable/ic_hostory"
            android:checkable="true"
            android:title="@string/menu_title_history"/>

        <item android:id="@+id/my_download"
            android:checkable="true"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_title_my_download"/>
    </group>



    <group android:id="@+id/menu_group_setting">
        <item android:id="@+id/menu_setting"
            android:title="@string/title_setting"
            android:icon="@drawable/ic_settings"/>
    </group>

</menu>