<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bangumiDetali"
            type="com.tyxapp.bangumi_jetpack.data.BangumiDetail" />

        <import type="com.tyxapp.bangumi_jetpack.utilities.AnimationUtilsKt" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="?android:attr/windowBackground"
            android:id="@+id/detail_bottom_sheeet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <androidx.cardview.widget.CardView
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="38dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="简介" />

                    <ImageButton
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_close"
                        android:tint="?android:attr/colorControlNormal" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:foreground="?attr/imageMask"
                        android:id="@+id/cover"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{bangumiDetali.cover}"
                        app:angle="@{AnimationUtilsKt.toPx(3)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{bangumiDetali.name}"
                        android:textSize="16sp"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cover"
                        app:layout_constraintTop_toTopOf="@+id/cover" />

                    <TextView
                        android:id="@+id/ji"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{bangumiDetali.jiTotal}"
                        app:layout_constraintBottom_toBottomOf="@+id/cover"
                        app:layout_constraintStart_toEndOf="@+id/cover" />

                    <TextView
                        android:id="@+id/niandai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{bangumiDetali.niandai}"
                        app:layout_constraintBottom_toTopOf="@+id/ji"
                        app:layout_constraintStart_toEndOf="@+id/cover" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_style"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintStart_toStartOf="@+id/cover"
                        app:layout_constraintTop_toBottomOf="@+id/cover" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{bangumiDetali.type}"
                        android:textColor="@android:color/tertiary_text_light"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/text_cast"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/cast"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{bangumiDetali.cast}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/text_staff"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintStart_toStartOf="@+id/cast"
                        app:layout_constraintTop_toBottomOf="@+id/cast" />

                    <TextView
                        android:id="@+id/staff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{bangumiDetali.staff}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/text_intro"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintStart_toStartOf="@+id/staff"
                        app:layout_constraintTop_toBottomOf="@+id/staff" />

                    <TextView
                        android:id="@+id/intro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@{bangumiDetali.intro}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>